// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Main > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<main
  class="rmd-layout-main"
  id="main-_r_0_"
>
  Hello, world!
</main>
`;

exports[`Main > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<main
  class="rmd-layout-main custom-class-name"
  id="main-_r_0_"
  style="color: white;"
>
  Hello, world!
</main>
`;

exports[`Main > should apply the correct styling, HTMLAttributes, and allow a ref 3`] = `
<main
  class="rmd-layout-main rmd-layout-main--offset-v rmd-layout-h--active"
  id="main-_r_0_"
  style=""
>
  Hello, world!
</main>
`;

exports[`Main > styling utility class > should be callable without any arguments 1`] = `"rmd-layout-main"`;
